src/tests/data/SemanticErrors/UndefinedRefToVar.c

#include <stdio.h>

int main()
{
    a = 1;  // ERROR
	return 0;
}